--- a/css/index.css
+++ b/css/index.css
@@ -210,6 +210,21 @@ img {
     justify-content: space-around;
   }
 }
+.main-navigation .nav-container .nav .active {
+  color: rgba(236, 91, 91, 0.6);
+  transition: color 0.3s ease-in-out;
+}
+.main-navigation .nav-container .nav .nav-link::after {
+  content: '';
+  display: block;
+  height: 1px;
+  width: 0;
+  background: rgba(236, 91, 91, 0.8);
+  transition: width 0.2s ease-in-out;
+}
+.main-navigation .nav-container .nav .nav-link:hover::after {
+  width: 100%;
+}
 .main-navigation .nav-container .nav a {
   font-size: 1.6rem;
   color: #212529;
